<?xml version="1.0" encoding="utf-8"?><resources>
    <string name="about">About</string>
    <string name="about_text">Just Holo.
Just Everywhere.</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="app_name">HoloEverywhere Demo</string>
    <string name="autocompletetextview">Auto complete input field</string>
    <string name="base_widgets">Base widgets</string>
    <string name="button">Button</string>
    <string name="calendar">Calendar</string>
    <string name="checkable_buttons">Checkable buttons</string>
    <string name="checkbox">Checkbox</string>
    <string name="contextmenu">ContextMenu</string>
    <string name="dark">Dark</string>
    <string name="datepicker">DatePicker</string>
    <string name="demo">Demo</string>
    <string name="developer_christophe">Christophe Versieux</string>
    <string name="developer_christophe_description">Founder and coordinator of the project</string>
    <string name="developer_sergey">Sergey Shatunov</string>
    <string name="developer_sergey_description">Main developer</string>
    <string name="disable_music">Disable music</string>
    <string name="edittext">Input field</string>
    <string name="github">GitHub</string>
    <string name="library_name">HoloEverywhere</string>
    <string name="light">Light</string>
    <string name="listpopupwindow">ListPopupWindow</string>
    <string name="listviewModal">ListView Modal</string>
    <string name="mixed">Mixed</string>
    <string name="numberpicker">NumberPicker</string>
    <string name="other">Other</string>
    <string name="popupmenu">PopupMenu</string>
    <string name="preference_base">Base</string>
    <string name="preference_check_box_summary_off">I not checked ;(</string>
    <string name="preference_check_box_summary_on">I checked! :)</string>
    <string name="preference_check_box_title">CheckBox</string>
    <string name="preference_edit_text_dialog_title">I\'m listening</string>
    <string name="preference_edit_text_summary">Tap me!</string>
    <string name="preference_edit_text_title">EditText</string>
    <string name="preference_list_dialog_title">@string/preference_list_summary</string>
    <string name="preference_list_summary">Skillet</string>
    <string name="preference_list_title">List</string>
    <string name="preference_lists">Lists</string>
    <string name="preference_multi_list_dialog_title">@string/preference_multi_list_summary</string>
    <string name="preference_multi_list_summary">Nirvana</string>
    <string name="preference_multi_list_title">MultiSelectList</string>
    <string name="preference_number_picker_dialog_title">Play to roulette!</string>
    <string name="preference_number_picker_summary">Numbers... Hm.</string>
    <string name="preference_number_picker_title">NumberPicker</string>
    <string name="preference_other">@string/other</string>
    <string name="preference_ringtone_summary">I love music!</string>
    <string name="preference_ringtone_title">Ringtone</string>
    <string name="preference_seek_bar">SeekBar</string>
    <string name="preference_seek_bar_dialog">SeekBarDialog</string>
    <string name="preference_summary">Preference Demo</string>
    <string name="preference_switch_summary_off">Noooooo! ;(</string>
    <string name="preference_switch_summary_on">I love world! :)</string>
    <string name="preference_switch_title">Switch</string>
    <string name="preference_title">@string/library_name</string>
    <string name="preference_unsupported">Unsupported preferences</string>
    <string name="preference_volume">Volume</string>
    <string name="progress_bars">Progress bars</string>
    <string name="progressdialog">ProgressDialog</string>
    <string name="radiobutton">Radio-button</string>
    <string name="select_browser">Select a browser</string>
    <string name="select_email_programm">Select a email programm</string>
    <string name="select_number">Select number</string>
    <string name="settings">Settings</string>
    <string name="timepicker">TimePicker</string>
    <string name="toast">Toast</string>
    <string name="very_very_long_operation">Very-very long operation...</string>
    <string name="write_to_developers">Write to developers</string>
</resources>
