<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:holo="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:divider="?android:listDivider"
		android:orientation="vertical"
		android:showDividers="middle"
		holo:showDividers="middle" >
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showAlertDialog"
			android:text="@string/alertdialog" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showProgressDialog"
			android:text="@string/progressdialog" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showListViewModal"
			android:text="@string/listviewModal" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showCalendar"
			android:text="@string/calendar" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showNumberPicker"
			android:text="@string/numberpicker" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showDatePicker"
			android:text="@string/datepicker" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showTimePicker"
			android:text="@string/timepicker" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showPopupMenu"
			android:text="@string/popupmenu" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showListPopupWindow"
			android:text="@string/listpopupwindow" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showContextMenu"
			android:text="@string/contextmenu" />
		<DemoNavigationItem
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="showToast"
			android:text="@string/toast" />
	</LinearLayout>
</ScrollView>