<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:holo="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="?listPreferredItemHeightSmall"
	android:minHeight="?listPreferredItemHeightSmall"
	android:orientation="horizontal"
	holo:divider="?dividerHorizontal"
	holo:showDividers="middle" >
	<TextView
		android:id="@+id/dark"
		android:layout_width="0dp"
		android:layout_height="?listPreferredItemHeightSmall"
		android:layout_weight="1"
		android:background="?selectableItemBackground"
		android:gravity="center"
		android:text="@string/dark"
		android:textAppearance="?android:textAppearanceMedium" />
	<TextView
		android:id="@+id/light"
		android:layout_width="0dp"
		android:layout_height="?listPreferredItemHeightSmall"
		android:layout_weight="1"
		android:background="?selectableItemBackground"
		android:gravity="center"
		android:text="@string/light"
		android:textAppearance="?android:textAppearanceMedium" />
	<TextView
		android:id="@+id/mixed"
		android:layout_width="0dp"
		android:layout_height="?listPreferredItemHeightSmall"
		android:layout_weight="1"
		android:background="?selectableItemBackground"
		android:gravity="center"
		android:text="@string/mixed"
		android:textAppearance="?android:textAppearanceMedium" />
</LinearLayout>