<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:holo="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<ListView
		android:id="@+id/navigationListView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:listChoiceBackgroundIndicator="?selectableItemBackground"
		android:listSelector="?selectableItemBackground"
		android:scrollbars="none" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:divider="?android:listDivider"
		android:orientation="vertical"
		android:showDividers="middle|beginning"
		holo:showDividers="middle|beginning" >
		<DemoNavigationItem
			android:id="@+id/themePickerDark"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="setDarkTheme"
			android:text="@string/dark" />
		<DemoNavigationItem
			android:id="@+id/themePickerLight"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="setLightTheme"
			android:text="@string/light" />
		<DemoNavigationItem
			android:id="@+id/themePickerMixed"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="setMixedTheme"
			android:text="@string/mixed" />
	</LinearLayout>
</LinearLayout>